changed margin 20% to padding 20% to see if thats the image stretching issue

--- a/styles/about.css
+++ b/styles/about.css
@@ -20,13 +20,17 @@ body {
   display: flex;
   justify-content: space-between;
   margin-top: 2%;
-  margin-left: 20%;
-  margin-right: 20%;
+  padding-left: 20%;
+  padding-right: 20%;
+  top: 0;
+  position: sticky;
+  background-color: white;
+  /* margin-left: 20%;
+  margin-right: 20%; */
   /* top: 0;
   position: sticky; */
-  background-color: white;
-  padding-left: 2%;
-  padding-right: 2%;
+  /* padding-left: 2%;
+  padding-right: 2%; */
 }
 
 #nav ul {
@@ -57,10 +61,12 @@ body {
 
 /* hero  styles */
 .hero {
-  margin-left: 20%;
-  margin-right: 20%;
+  /* margin-left: 20%;
+  margin-right: 20%; */
   margin-top: 7%;
   padding-bottom: 5%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 .hero h1 {
@@ -100,9 +106,11 @@ body {
 }
 
 .info-paragraphs p {
-  margin-left: 20%;
-  margin-right: 20%;
+  /* margin-left: 20%;
+  margin-right: 20%; */
   font-size: medium;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 /* footer */
