--- a/styles/index.css
+++ b/styles/index.css
@@ -20,10 +20,12 @@ body {
   display: flex;
   justify-content: space-between;
   margin-top: 2%;
-  margin-left: 20%;
-  margin-right: 20%;
-  /* top: 0;
-  position: sticky; */
+  /* margin-left: 20%;
+  margin-right: 20%; */
+  padding-left: 20%;
+  padding-right: 20%;
+  top: 0;
+  position: sticky;
   background-color: white;
 }
 
@@ -74,8 +76,10 @@ body {
 
 /* hero styles */
 .hero-text-container {
-  margin-left: 20%;
-  margin-right: 20%;
+  /* margin-left: 20%;
+  margin-right: 20%; */
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 .overlay {
@@ -107,8 +111,10 @@ body {
   margin-bottom: 7%;
   box-shadow: 3px 3px #f3f3f3;
   border-radius: 2%;
-  margin-left: 20%;
-  margin-right: 20%;
+  /* margin-left: 20%;
+  margin-right: 20%; */
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 .card-2 {
